--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.9.0",
     "next": "15.3.4",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
