--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.9.0",
+    "firebase": "^12.0.0",
     "next": "15.3.4",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
